# Python

./: .gitignore  Game - English.py  README.md  Test_1.py  english_to_morse.py  get_response.html  llylia.py  number = input().py  page_snapshot_20250429_163356.html
C1/: Game  - Spainish.py  Game - Guess_word.py  Test_1.py
C2L1/: Weight  exp_2.txt  info.txt  shopping_list.txt  test_2_files.py  test_3.txt  test_3_files.py  test_4_loop.py
C2L2/: Homework_lecture_7.py  Homework_lecture_7_ver2.py  Test_1.py
C2L3/: home_work_lect3 (ver_2).py  home_work_lect3.json  test_1.py
C2L4_Coursework/: Coursework.py  Coursework_2.0.py  Coursework_3.0.py  data.json  lessons.json
C3L1/: Home_work.py  Test_2.py  Test_3.py  num_list.json  records.json
C3L2/: C3L2Test1.py  C3L2Test2.py  C3L2Test2_mybook.py  compose.yaml  password_base.json  publications.json  records.txt
C3L3/: test1.py
CodeWars/: Basic_math.py  Best_travel.py  Bitwise_addition.py  Decimal_to_hexadecimal.py  Highest_Lowest.py  Is_cheating.py  Many_Permutations.py  Many_Permutations_test.py  Primes_in_numbers.py  Roman_Numerals_Helper.py  Smallest_possible_sum.py  Take_a_Ten_Minutes_Walk.py  Take_a_Ten_Minutes_Walk_test.py  The_Hashtag_Generator.py  find_even_index.py  int32.py  int_to_datetime.py  is_pangram.py  letter_to_int.py  not_repeat_list.py  of_Pancakes.py  reverse_words.py  sum_of_intervals.py  (+1 more)
lesson27_Django/: db.sqlite3  pyproject.toml
lesson27_Django/django_project/: settings.py  urls.py
lesson27_Django/vacancies/: models.py  views.py
lesson27_Django/vacancies/migrations/: 0001_initial.py
(+584 files in other folders)
